@@ -1,0 +1,9 @@
+MD5 dd32128b216cc097b3018f255620394b openssh-4.6p1+x509-5.5.2.diff.gz 141892
+RMD160 3aacab881f28b7e8087481a6fcf661f67502319b openssh-4.6p1+x509-5.5.2.diff.gz 141892
+SHA256 b365d2819ba1f81411382106629b8fe74ae5aa4a1081aa8e3c44858c115c822e openssh-4.6p1+x509-5.5.2.diff.gz 141892
+MD5 0bc643a4e1588f7abdcdbb31304bac56 openssh-4.6p1-hpn12v16.diff.gz 15944
+RMD160 421e2c189c2e9b378f6ee3944183355f9f18d5e8 openssh-4.6p1-hpn12v16.diff.gz 15944
+SHA256 f304e3b04e2772c27c09e9aa5a3fd02747187a8775de39879c3d871fad1e156f openssh-4.6p1-hpn12v16.diff.gz 15944
+MD5 6a7fa99f44d9e1b5b04d15256e1405bb openssh-4.6p1.tar.gz 967395
+RMD160 2959ac56c9175275bf82847ec64b2b169aedcb82 openssh-4.6p1.tar.gz 967395
+SHA256 7bbe277faa80c8d8d9cb96111db65fc0007d451784cc459207cd46b746a6f23a openssh-4.6p1.tar.gz 967395
