@@ -1,0 +1,8 @@
+#%PAM-1.0
+
+auth       required     pam_shells.so
+auth	   required	pam_nologin.so
+auth       include	system-auth
+account    include	system-auth
+password   include	system-auth
+session	   include	system-auth
